2010-08-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-other-window-manager): Update for
	clisp compatibility.

	* src/tools.lisp (do-execute): New parameter io to change the
	input/output method.

	* src/clfswm-util.lisp (hide-current-child): Prevent from removing
	the current root.

	* src/clfswm-internal.lisp (child-member): New predicate.
	(child-remove): New function.

	* src/*.lisp: Use child-member and child-remove everywhere it's
	needed.

2010-08-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-loop): Ensure that all events have been
	processed after a process-event.

	* src/clfswm-internal.lisp (is-in-current-child-p): New function.

2010-08-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-mode:configure-request): Raise the window
	only when present on the current child and focus it accordingly.

2010-08-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (circulate-loop-function):
	Use is-a-key-pressed-p.

	* src/xlib-util.lisp (is-a-key-pressed-p): New predicate.

	* src/clfswm-keys.lisp (define-ungrab/grab): Use all values
	returned by xlib:keysym->keycodes.

	* src/*.lisp: Use the new child-equal-p to compare children. This
	prevent a bug with sbcl/cmucl when the standard equal function
	does not work with xlib:window.

	* src/clfswm-internal.lisp (child-equal-p): New predicate.

2010-08-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-generic-mode.lisp (generic-mode): Use an
	xlib:event-listen before processing event with
	xlib:process-event. This prevent a bug with CLX threaded
	implementation like sbcl.

	* src/clfswm.lisp (main-loop): Use an xlib:event-listen before
	processing event with xlib:process-event. This prevent a bug with
	CLX threaded implementation like sbcl.

2010-08-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/server/key.lisp (ushell-sh): Add ccl and ecl support.
